skins/larry/styles.css
/* ... */
a.menuselector:active {
	background: #dddddd;
	background: -moz-linear-gradient(top, #dddddd 0%, #f8f8f8 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#dddddd), color-stop(100%,#f8f8f8));
	background: -o-linear-gradient(top, #dddddd 0%, #f8f8f8 100%);
	background: -ms-linear-gradient(top, #dddddd 0%, #f8f8f8 100%);
	background: linear-gradient(top, #dddddd 0%, #f8f8f8 100%);
	text-decoration: none;
}

a.dropdownselector {
	position: absolute;
	padding: 1px 0;
	z-index: 1;
}

a.dropdownselector .handle {
	margin: -1px 0;
	padding-top: 5px;
	min-height: 20px;
}

select.decorated {
	position: relative;
	z-index: 10;
	opacity: 0;
	height: 22px;
	cursor: pointer;
	filter: alpha(opacity=0);
	-khtml-appearance: none;
	-webkit-appearance: none;
}

html.opera select.decorated {
	opacity: 1;
	height: auto;
}

select.decorated option {
	color: #fff;
	background: #444;
	border: 0;
	border-top: 1px solid #5a5a5a;
	border-bottom: 1px solid #333;
	text-shadow: 0px 1px 1px #333;
	padding: 6px 10px;
	outline: none;
}


/*** quota indicator ***/

#quotadisplay {
	left: 6px;
	font-size: 12px;
	font-weight: bold;
	text-shadow: 0px 1px 1px #fff;
	padding-left: 30px;
	height: 18px;
	background: url(images/quota.png) -100px 0 no-repeat;
}

/*** popup menus ***/

.popupmenu,
#rcmKSearchpane {
	display: none;
	position: absolute;
	top: 32px;
	left: 90px;
	width: auto;
	background: #444;
	border: 1px solid #999;
	z-index: 240;
	border-radius: 4px;
	box-shadow: 0 2px 6px 0 #333;
	-moz-box-shadow: 0 2px 6px 0 #333;
	-webkit-box-shadow: 0 2px 6px 0 #333;
	-o-box-shadow: 0 2px 6px 0 #333;
}

.popupmenu.dropdown {
	border-radius: 0 0 4px 4px;
	border-top: 0;
}

ul.toolbarmenu,
#rcmKSearchpane ul {
	margin: 0;
	padding: 0;
	list-style: none;
}

.googie_list td,
ul.toolbarmenu li,
#rcmKSearchpane ul li {
	color: #fff;
	white-space: nowrap;
	min-width: 130px;
	margin: 0;
	border-top: 1px solid #5a5a5a;
	border-bottom: 1px solid #333;
}

.googie_list tr:first-child td,
ul.toolbarmenu li:first-child,
select.decorated option:first-child {
	border-top: 0;
}

.googie_list tr:last-child td,
ul.toolbarmenu li:last-child,
select.decorated option:last-child {
	border-bottom: 0;
}

.googie_list td span,
ul.toolbarmenu li a {
	display: block;
	color: #666;
	text-shadow: 0px 1px 1px #333;
	text-decoration: none;
	min-height: 14px;
	padding: 6px 10px 6px 10px;
}

.googie_list td span {
	padding: 3px 10px;
}

.googie_list td span,
ul.toolbarmenu li a.active {
	color: #fff;
	cursor: default;
}

.googie_list td.googie_list_onhover,
ul.toolbarmenu li a.active:hover,
#rcmKSearchpane ul li.selected,
select.decorated option:hover,
select.decorated option[selected='selected'] {
	background-color: #00aad6;
	background: -moz-linear-gradient(top, #00aad6 0%, #008fc9 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00aad6), color-stop(100%,#008fc9));
	background: -o-linear-gradient(top, #00aad6 0%, #008fc9 100%);
	background: -ms-linear-gradient(top, #00aad6 0%, #008fc9 100%);
	background: linear-gradient(top, #00aad6 0%, #008fc9 100%);
}

ul.toolbarmenu.iconized li a,
ul.toolbarmenu.selectable li a {
	padding-left: 30px;
}

ul.toolbarmenu.selectable li a.selected {
	background: url(images/messages.png) 4px -27px no-repeat;
}

ul.toolbarmenu li label {
	display: block;
	color: #fff;
	padding: 4px 8px;
	text-shadow: 0px 1px 1px #333;
}

ul.toolbarmenu li a.icon {
	color: #eee;
	padding: 2px 6px;
}

ul.toolbarmenu li span.icon {
	display: block;
	min-height: 14px;
	padding: 4px 4px 1px 24px;
	height: 17px;
	background-image: url(images/listicons.png);
	background-position: -100px 0;
	background-repeat: no-repeat;
	opacity: 0.2;
	filter: alpha(opacity=20);
}

ul.toolbarmenu li a.active span.icon {
	opacity: 0.99;
	filter: alpha(opacity=100);
}

ul.toolbarmenu li span.read {
	background-position: 0 -1220px;
}

ul.toolbarmenu li span.unread {
	background-position: 0 -1196px;
}

ul.toolbarmenu li span.flagged {
	background-position: 0 -1244px;
}

ul.toolbarmenu li span.unflagged {
	background-position: 0 -1268px;
}

ul.toolbarmenu li span.mail {
	background-position: 0 -1293px;
}

ul.toolbarmenu li span.list {
	background-position: 0 -1317px;
}

ul.toolbarmenu li span.invert {
	background-position: 0 -1340px;
}

ul.toolbarmenu li span.cross {
	background-position: 0 -1365px;
}

ul.toolbarmenu li span.print {
	background-position: 0 -1436px;
}

ul.toolbarmenu li span.download {
	background-position: 0 -1412px;
}

ul.toolbarmenu li span.edit {
	background-position: 0 -1388px;
}

ul.toolbarmenu li span.viewsource {
	background-position: 0 -1460px;
}

ul.toolbarmenu li span.extwin {
	background-position: 0 -1484px;
}

ul.toolbarmenu li span.conversation {
	background-position: 0 -1532px;
}

#rcmKSearchpane {
	border-radius: 0 0 4px 4px;
	border-top: 0;
}

#rcmKSearchpane ul li {
	text-shadow: 0px 1px 1px #333;
	text-decoration: none;
	min-height: 14px;
	padding: 6px 10px 6px 10px;
	border: 0;
	cursor: default;
}

.popupdialog {
	display: none;
	padding: 10px;
}

.popupdialog .formbuttons {
	margin: 20px 0 4px 0;
}

.ui-dialog .prompt input {
	display: block;
	margin: 8px 0;
}

.hint {
	margin: 4px 0;
	color: #999;
	text-shadow: 0px 1px 1px #fff;
}

.splitter {
	user-select: none;
	-moz-user-select: none;
	-khtml-user-select: none;
	position: absolute;
	background: url(images/splitter.png) center no-repeat;
}

.splitter-h {
	height: 10px;
	width: 100%;
	cursor: n-resize;
	cursor: row-resize;
	background-position: center 0;
}

.splitter-v {
	width: 10px;
	height: 100%;
	cursor: e-resize;
	cursor: col-resize;
	background-position: 0 center;
}
/* ... */

